[package]
name = "txn-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = {version = "0.19.0", features = ["native-tls"]}
tokio = {version = "1.28.2", features = ["full"]}
futures = "0.3.28"
serde = {version= "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
dotenv = "0.15.0"
reqwest = "0.11.18"
